--- a/GUIClient/App.xaml
+++ b/GUIClient/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GUIClient"
-             StartupUri="MainWindow.xaml">
+             StartupUri="SinglePlayer.xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
