--- a/GUIClient/MultiPlayer.xaml
+++ b/GUIClient/MultiPlayer.xaml
@@ -6,24 +6,31 @@
         xmlns:Controls="clr-namespace:GUIClient"
         mc:Ignorable="d"
         Title="{Binding VMName}" x:Name="MultiPlayerWin"  Closing="Window_Closing" Loaded="MultiPlayerWin_Loaded"  Height="300" Width="600">
-    <Grid>
+    <Grid Background="Aquamarine">
         <Grid.RowDefinitions>
-            <RowDefinition x:Name="bar" Height="20" />
-            <RowDefinition Height="15" />
+            <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Button Grid.Column="0" Content="back to main" HorizontalAlignment="Right" Width="100" Click="back_to_main_Click"/>
-        <Border BorderBrush="Black" BorderThickness="3" Grid.Row="2"  Grid.Column="0">
-            <Controls:MazeControl Width="300" HorizontalAlignment="Left" Rows="{Binding VMRows}" Cols="{Binding VMCols}" SerializedGame="{Binding VMSerializedGame}" InitialPos="{Binding VMInitialPos}" GoalPos="{Binding VMGoalPos}" PlayerPosition="{Binding VMPlayerPosition}" x:Name="mazeControl" Grid.Column="2" Grid.Row="0" LostFocus="mazeControl_LostFocus" Margin="0,0,7,7" KeyDown="mazeControl_KeyDown"  />
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="3" Grid.Row="2" Grid.Column="1">
-            <Controls:MazeControl Width="300" HorizontalAlignment="Left" Rows="{Binding VMRows}" Cols="{Binding VMCols}" SerializedGame="{Binding VMSerializedGame}" InitialPos="{Binding VMInitialPos}" GoalPos="{Binding VMGoalPos}" PlayerPosition="{Binding VMRavilPlayerPosition}" x:Name="ravilMazeControl" Grid.Column="2" Grid.Row="1" LostFocus="mazeControl_LostFocus" Margin="0,0,7,7" KeyDown="mazeControl_KeyDown"  />
-        </Border>
-        <TextBlock Grid.Row="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Your Maze:" VerticalAlignment="Top"/>
-        <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Rival Maze:" VerticalAlignment="Top"/>
+        <Button Grid.Row="0" Background="#FF97C24E" Content="Back To Main" HorizontalAlignment="Center" Width="100" Click="back_to_main_Click"/>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+            
+                <RowDefinition Height="20" />
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="Your Maze:" VerticalAlignment="Top"/>
+            <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Rival Maze:" VerticalAlignment="Top"/>
+            <Border BorderBrush="Black" BorderThickness="3" Grid.Row="1"  Grid.Column="0">
+                <Controls:MazeControl Width="300" HorizontalAlignment="Left" Rows="{Binding VMRows}" Cols="{Binding VMCols}" SerializedGame="{Binding VMSerializedGame}" InitialPos="{Binding VMInitialPos}" GoalPos="{Binding VMGoalPos}" PlayerPosition="{Binding VMPlayerPosition}" x:Name="mazeControl" Grid.Column="2" Grid.Row="0" LostFocus="mazeControl_LostFocus" Margin="0,0,7,7" KeyDown="mazeControl_KeyDown"  />
+            </Border>
+            <Border BorderBrush="Black" BorderThickness="3" Grid.Row="1" Grid.Column="1">
+                <Controls:MazeControl Width="300" HorizontalAlignment="Left" Rows="{Binding VMRows}" Cols="{Binding VMCols}" SerializedGame="{Binding VMSerializedGame}" InitialPos="{Binding VMInitialPos}" GoalPos="{Binding VMGoalPos}" PlayerPosition="{Binding VMRavilPlayerPosition}" x:Name="ravilMazeControl" Grid.Column="2" Grid.Row="1" LostFocus="mazeControl_LostFocus" Margin="0,0,7,7" KeyDown="mazeControl_KeyDown"  />
+            </Border>
+            
+        </Grid>
     </Grid>
 </Window>
